
* Another round of bugfixes for MySQL errors 2006 and 2013 (SERVER_GONE,
  SERVER_LOST).

* Fixed a bug in MSSQLConnection caused by column names being unicode.

* Fixed a bug in FirebirdConnection caused by column names having trailing
  spaces.

* Order by several columns with inheritance.

* Fixed aggregators and accumulators with inheritance.

SQLObject 0.7.8
===============

* Replaced calls to style.dbColumnToPythonAttr() in joins.py by name/dbName
  lookup in case the user named columns differently using dbName.

* Minor correction in the tests: we fully support EnumCol in Postgres.

* MySQLConnection now recognizes Enum, Double and Time columns when drawing the
  database scheme from DB.

* Minor fix in FirebirdConnection.fromDatabase.

SQLObject 0.7.7
===============

Released 10 May 2007.

Bug Fixes
---------

* Fixed a bug in SQLRelatedJoin that ignored per-instance connection.

* Fixed a bug in MySQL connection in case there is no charset in the DB URI.

SQLObject 0.7.6
===============

Released 3 May 2007.

Bug Fixes
---------

* Fixed a longstanding bug with .select() ignoring 'limit' parameter.

* Fixed a bug with absent comma in JOINs.

* Fixed sqlbuilder - .startswith(), .endswith() and .contains() assumed
  their parameter must be a string; now you can pass an SQLExpression:
  Table.q.name.contains(func.upper('a')), for example.

* Fixed a longstanding bug in sqlbuilder.Select() with groupBy being a
  sequence.

* Fixed a bug with Aliases in JOINs.

* Yet another patch to properly initialize MySQL connection encoding.

* Fixed a minor comparison problem in test_decimal.py.

* More documentation about orderBy.

SQLObject 0.7.5
===============

Released 11 Apr 2007.

Bug Fixes
---------

* Fixed test_deep_inheritance.py - setup classes in the correct order
  (required for Postgres 8.0+ which is strict about referential integrity).

* Fixed a bug in DateValidator caused by datetime being a subclass of date.

SQLObject 0.7.4
===============
