@@ -232,6 +232,9 @@ Bug Fixes
 SQLObject 0.7.8
 ===============
 
+Bug Fixes
+---------
+
 * Replaced calls to style.dbColumnToPythonAttr() in joins.py by name/dbName
   lookup in case the user named columns differently using dbName.
 
@@ -241,6 +244,8 @@ SQLObject 0.7.8
   database scheme from DB.
 
 * Minor fix in FirebirdConnection.fromDatabase.
+
+* Fixed a bug with default field values for columns for firebird connection.
 
 SQLObject 0.7.7
 ===============
